add light green background color and more

--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -73,12 +73,12 @@
             </button>
           </div>
           <nav class="hidden space-x-10 md:flex">
-            <a href="/contacts" class="text-base font-medium text-gray-500 hover:text-gray-900">Contacts</a>
-            <a href="/about" class="text-base font-medium text-gray-500 hover:text-gray-900">About</a>
+            <a href="/contacts" class="text-base font-medium text-gray-700 hover:text-gray-900">Contacts</a>
+            <a href="/about" class="text-base font-medium text-gray-700 hover:text-gray-900">About</a>
           </nav>
           <div class="hidden items-center justify-end md:flex md:flex-1 lg:w-0">
             <% if (user) { %>
-            <a href="/contacts/<%= user.username %>" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Go to profile</a>
+            <a href="/contacts/<%= user.username %>" class="whitespace-nowrap text-base font-medium text-gray-700 hover:text-gray-900">Go to profile</a>
 
             <form action="/logout" method="POST" class="flex flex-wrap">
               <label for="logout">
@@ -86,7 +86,7 @@
               </label>
             </form>
             <% } else { %>
-            <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">Login</a>
+            <a href="/login" class="whitespace-nowrap text-base font-medium text-gray-700 hover:text-gray-900">Login</a>
             <a href="/register" class="ml-8 inline-flex items-center justify-center whitespace-nowrap rounded-md border  bg-green-600 px-4 py-2 text-base font-medium text-white shadow-sm hover:bg-green-700">Add Your Contact</a>
             <% } %>
           </div>
@@ -127,7 +127,7 @@
     </div>
   </header>
 
-  <body class="bg-gray-50 h-full">
+  <body class="bg-green-100 h-full">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
     <main id="main-content">
       <!-- BODY  -->
