add error handlers

--- a/view/error.ejs
+++ b/view/error.ejs
@@ -1,8 +1,8 @@
 <!-- HEADER -->
 <%- include('includes/header') %>
 <!-- HEADER END-->
-<div class="flex min-h-full flex-col bg-white pt-16 pb-12">
-  <main class="mx-auto flex w-full max-w-7xl flex-grow flex-col justify-center px-4 sm:px-6 lg:px-8">
+<div class="flex min-h-full flex-col pt-16 pb-12">
+  <main class="mx-auto flex w-full max-w-7xl bg-white flex-grow flex-col justify-center px-4 sm:px-6 lg:px-8">
     <div class="py-16">
       <div class="text-center">
         <p class="text-base font-semibold text-green-700">Error</p>
