--- a/view/includes/flash.ejs
+++ b/view/includes/flash.ejs
@@ -10,5 +10,5 @@
 
 <!-- SUCCESS FLASH -->
 <% success.forEach(function(message){ %>
-<div class="bg-green-100 border border-green-400 text-green-700 text-center px-4 py-3 rounded"><%= message %></div>
+<div class="bg-green-300 border border-green-400 text-center px-4 py-3 rounded"><%= message %></div>
 <% }) %>
