--- a/view/loginPage.ejs
+++ b/view/loginPage.ejs
@@ -33,7 +33,7 @@
               <div class="w-full border-t border-gray-300"></div>
             </div>
             <div class="relative flex justify-center text-sm">
-              <span class="bg-white px-2 text-gray-500">Or continue with</span>
+              <span class="bg-green-100 px-2 text-gray-600">Or continue with</span>
             </div>
           </div>
         </div>
