--- a/view/registrationPage.ejs
+++ b/view/registrationPage.ejs
@@ -33,7 +33,7 @@
               <div class="w-full border-t border-gray-300"></div>
             </div>
             <div class="relative flex justify-center text-sm">
-              <span class="bg-white px-2 text-gray-500">Or continue with</span>
+              <span class="bg-green-100 px-2 text-gray-600">Or continue with</span>
             </div>
           </div>
         </div>
@@ -84,7 +84,7 @@
               <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
               <div class="mt-1">
                 <input id="password" name="password" type="password" autocomplete="new-password" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
-                <p class="text-red-300 text-xs mt-1 italic">Password should be a minimun of 6 characters</p>
+                <p class="text-red-700 text-xs mt-1 italic">Password should be a minimun of 6 characters</p>
               </div>
             </div>
 
