sitemap and words changes

--- a/view/settings/edit-profile.ejs
+++ b/view/settings/edit-profile.ejs
@@ -24,7 +24,7 @@
                 <div>
                   <label for="username" class="block text-sm font-medium text-gray-700 required:text-red-500"> Username <span class="text-red-600">*</span></label>
                   <div class="mt-1 flex rounded-md shadow-sm">
-                    <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-700 sm:text-sm"><%=locals.domain%>/</span>
+                    <span class="inline-flex items-center rounded-l-md border border-r-0 border-gray-300 bg-gray-50 px-3 text-gray-700 sm:text-sm"><%=locals.domain%>/contacts/</span>
                     <input type="text" name="username" id="username" autocomplete="username" class="block w-full min-w-0 flex-grow rounded-none rounded-r-md border-gray-300 focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm" value="<%= profile.username %>" />
                   </div>
                 </div>
