--- a/view/includes/header.ejs
+++ b/view/includes/header.ejs
@@ -129,7 +129,7 @@
 
   <body class="bg-green-100 h-full">
     <a id="skip-nav" class="screenreader-text" href="#main-content"> Skip to Main Content </a>
-    <main id="main-content">
+    <div id="main-content">
       <!-- BODY  -->
 
       <!--WATCH OUT FOR AUTO COMPLETE HERE  -->
