--- a/view/includes/footer.ejs
+++ b/view/includes/footer.ejs
@@ -1,36 +1,59 @@
 
 <!-- FOOTER -->
-<footer class="text-center text-xs sm:text-lg">
+<footer>
   <input id="gssg-environment" type="hidden" value="<%= locals.environment %>" >
-
-  <hr class="border-t border-black mb-4" />
     <!-- IF HOMEPAGE SHOW SCROLL-TO-TOP -->
   <% if( path == "/" ){ %>
       <div style="scroll-behavior: smooth;" class="flex justify-end"><a href="#main-content"> &#8657 Scroll To Top &#8657</a></div>
   <% } %>
-  <div class="flex px-4 justify-center items-center">
-    <div class="text-center">
-        <div>Contribute</div>
-        <a href="https://github.com/dankore/gssg-contact-book">
-          <svg xmlns="http://www.w3.org/2000/svg" class="blueOnHover" style="margin: auto" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-github"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-        </a>
-    </div>
-    <div>
-    &copy 2020 - <%= new Date().getFullYear() %> By <a class="blueOnHover" href="https://dankore.com">Adamu M. Dankore.</a><a class="blueOnHover" href="/privacy"> Privacy Policy.</a>
-    <div class="w-full flex justify-center items-center my-2">
-      <img loading="lazy" class="rounded-full w-16 h-16" src="../../static/logo.svg" alt="gss-gwarinpa logo">
-    </div>
-    </div>
-    <div>
-      <div>Connect</div>
-      <a href="https://www.facebook.com/groups/unitinggwarinpastudents">
-      <svg xmlns="http://www.w3.org/2000/svg" class="blueOnHover" style="margin: auto" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg>
+  <div class="mx-auto max-w-7xl overflow-hidden py-12 px-4 sm:px-6 lg:px-8">
+    <nav class="-mx-5 -my-2 flex flex-wrap justify-center" aria-label="Footer">
+      <div class="px-5 py-2">
+        <a href="/" class="text-base text-gray-700 hover:text-gray-900">Home</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="/about" class="text-base text-gray-700 hover:text-gray-900">About</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="/contacts" class="text-base text-gray-700 hover:text-gray-900">Contacts</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="/login" class="text-base text-gray-700 hover:text-gray-900">Login</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="/register" class="text-base text-gray-700 hover:text-gray-900">Register</a>
+      </div>
+
+      <div class="px-5 py-2">
+        <a href="/sitemap.xml" class="text-base text-gray-700 hover:text-gray-900">Sitemap</a>
+      </div>
+    </nav>
+    <div class="mt-8 flex justify-center space-x-6">
+      <a href="https://www.facebook.com/groups/unitinggwarinpastudents" class="text-gray-700 hover:text-gray-700 flex items-center">
+        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+          <path fill-rule="evenodd" d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z" clip-rule="evenodd" />
+        </svg>
+        <span class="ml-2">Facebook</span>
+      </a>
+
+      <a href="https://github.com/dankore/gssg-contact-book" class="text-gray-700 hover:text-gray-700 flex items-center ml-10">
+       
+        <svg class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+          <path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
+        </svg>
+         <span class="ml-2">GitHub</span>
       </a>
     </div>
+    <p class="mt-8 text-center text-base text-gray-700">&copy; 2020 - <%= new Date().getFullYear() %> By GSS Gwarinpa Class of 2006. Website by <a class="blueOnHover" href="https://dankore.com">Adamu M. Dankore.</a></p>
   </div>
 </footer>
+
 <!-- FOOTER ENDS -->
-</main>
+</div>
 <div class="modal-overlay"></div>
 </body>
 </html>
