--- a/view/settings/delete-account.ejs
+++ b/view/settings/delete-account.ejs
@@ -8,9 +8,9 @@
   <div class="mx-auto max-w-screen-xl px-4 pb-6 sm:px-6 lg:px-8 lg:pb-16">
     <div class="overflow-hidden rounded-lg bg-white shadow">
       <div class="divide-y divide-gray-200 lg:grid lg:grid-cols-12 lg:divide-y-0 lg:divide-x">
-        <%- include('../includes/settingsNav') %>
-
-        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= username %>/delete-account" method="POST">
+        <%- include('../includes/settingsNav') %> 
+      
+        <form class="divide-y divide-gray-200 lg:col-span-9" action="/settings/<%= user.username %>/delete-account" method="POST">
           <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
 
           <div class="py-6 px-4 sm:p-6 lg:pb-8">
