--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -223,14 +223,14 @@
                 <div class="relative pb-8">
                   <div class="relative flex space-x-3">
                     <div>
-                      <span class="h-8 w-8 rounded-full <%= locals.commentsCount == 'Be the first to say hello' ? ' bg-gray-500' : ' bg-green-500' %> flex items-center justify-center ring-8 ring-white">
+                      <span class="h-8 w-8 rounded-full <%= profile.commentsCount == 'Be the first to say hello' ? ' bg-gray-500' : ' bg-green-500' %> flex items-center justify-center ring-8 ring-white">
                         <svg class="h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" viewBox="0 0 20 20" fill="currentColor">
                           <path fill-rule="evenodd" d="M3.43 2.524A41.29 41.29 0 0110 2c2.236 0 4.43.18 6.57.524 1.437.231 2.43 1.49 2.43 2.902v5.148c0 1.413-.993 2.67-2.43 2.902a41.202 41.202 0 01-5.183.501.78.78 0 00-.528.224l-3.579 3.58A.75.75 0 016 17.25v-3.443a41.033 41.033 0 01-2.57-.33C1.993 13.244 1 11.986 1 10.573V5.426c0-1.413.993-2.67 2.43-2.902z" clip-rule="evenodd" />
                         </svg>
                       </span>
                     </div>
                     <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
-                      <p class="first-line:text-sm text-gray-600"><%= locals.commentsCount %></p>
+                      <p class="first-line:text-sm text-gray-600"><%= profile.commentsCount %></p>
                     </div>
                   </div>
                 </div>
