--- a/view/contact.ejs
+++ b/view/contact.ejs
@@ -7,12 +7,7 @@
       <div class="flex items-center space-x-5">
         <div class="flex-shrink-0">
           <div class="relative overflow-hidden rounded-full block">
-            <% if(profile.google_id){ %>
-            <img loading="lazy" src="<%= profile.google_photo %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
-            <% } else { %>
-            <img loading="lazy" src="<%= profile.photo %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
-            <%}%>
-
+            <img loading="lazy" src="<%= profile.google_id ? profile.google_photo : (profile.photo ? profile.photo : `https://robohash.org/${encodeURIComponent(profile.firstName)}.png`) %>" class="h-16 w-16 rounded-full from-indigo-500 via-purple-500 to-pink-500 bg-gradient-to-r" alt="<%= profile.firstName.substring(0,1) %>" />
             <span class="absolute inset-0 rounded-full shadow-inner" aria-hidden="true"></span>
           </div>
         </div>
@@ -146,7 +141,7 @@
                     <% profileOwnerComment = comment.visitorUsername === profile.username %>
                     <div class="flex space-x-3">
                       <p class="flex-shrink-0">
-                        <img loading="lazy" src="<%= comment.photo %>" class="overflow-hidden bg-gradient-to-r <%= profileOwnerComment ? 'from-indigo-500 via-purple-500 to-pink-500' : 'from-green-300 via-green-700 to-green-300' %> w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
+                        <img loading="lazy" src="<%= comment.photo ? comment.photo : `https://robohash.org/${encodeURIComponent(comment.visitorFirstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 w-8 h-8 rounded-full" alt="<%= comment.visitorFirstName.substring(0,1) %>" />
                       </p>
 
                       <div>
@@ -193,7 +188,7 @@
             <div class="bg-gray-50 px-4 py-6 sm:px-6">
               <div class="flex space-x-3">
                 <div class="flex-shrink-0">
-                  <img loading="lazy" src="<%= user.photo %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
+                  <img loading="lazy" src="<%= user.photo ? user.photo : `https://robohash.org/${encodeURIComponent(user.firstName)}.png` %>" class="overflow-hidden bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 h-10 w-10 rounded-full" alt="<%= profile.firstName.substring(0,1) %>" />
                 </div>
 
                 <div class="min-w-0 flex-1">
