--- a/view/contacts.ejs
+++ b/view/contacts.ejs
@@ -5,7 +5,7 @@
 <%- include('includes/flash') %>
 <!-- ERROR FLASH MESSAGE END-->
 
-<%- include('includes/searchBar') %> <%- include('includes/sort') %>
+<%- include('includes/searchBar') %>
 <div id="anchor-tag" class="flex flex-wrap justify-center my-12">
   <div class="mx-auto max-w-7xl px-4 text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
