--- a/view/about.ejs
+++ b/view/about.ejs
@@ -4,7 +4,7 @@
 <div>
   <div class="mx-auto max-w-7xl py-16 px-4 sm:py-24 sm:px-6 lg:px-8">
     <div class="text-center">
-      <p class="text-lg font-semibold text-green-700">About</p>
+      <p class="text-lg font-semibold text-primary-700">About</p>
       <h1 class="mt-1 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl lg:text-6xl">About GSS Gwarinpa Contact Book</h1>
       <p class="mx-auto my-5 max-w-xl text-xl text-gray-600">Project by GSS Gwarinpa class of 2006.</p>
     </div>
@@ -27,19 +27,19 @@
             <!-- Testimonial card-->
             <div class="relative overflow-hidden rounded-2xl pt-64 pb-10 shadow-xl">
               <img loading="lazy" class="absolute inset-0 h-full w-full object-cover" src="/static/gss-gwarinpa-logo.webp" alt="GSS Gwarinpa logo" loading="lazy" />
-              <div class="absolute inset-0 bg-green-500 mix-blend-multiply"></div>
-              <div class="absolute inset-0 bg-gradient-to-t from-green-600 via-green-600 opacity-90"></div>
+              <div class="absolute inset-0 bg-primary-500 mix-blend-multiply"></div>
+              <div class="absolute inset-0 bg-gradient-to-t from-primary-600 via-primary-600 opacity-90"></div>
               <div class="relative px-8">
                 <blockquote class="mt-8">
                   <div class="relative text-lg font-medium text-white md:flex-grow">
-                    <svg class="absolute top-0 left-0 h-8 w-8 -translate-x-3 -translate-y-2 transform text-green-400" fill="currentColor" viewBox="0 0 32 32" aria-hidden="true">
+                    <svg class="absolute top-0 left-0 h-8 w-8 -translate-x-3 -translate-y-2 transform text-primary-400" fill="currentColor" viewBox="0 0 32 32" aria-hidden="true">
                       <path d="M9.352 4C4.456 7.456 1 13.12 1 19.36c0 5.088 3.072 8.064 6.624 8.064 3.36 0 5.856-2.688 5.856-5.856 0-3.168-2.208-5.472-5.088-5.472-.576 0-1.344.096-1.536.192.48-3.264 3.552-7.104 6.624-9.024L9.352 4zm16.512 0c-4.8 3.456-8.256 9.12-8.256 15.36 0 5.088 3.072 8.064 6.624 8.064 3.264 0 5.856-2.688 5.856-5.856 0-3.168-2.304-5.472-5.184-5.472-.576 0-1.248.096-1.44.192.48-3.264 3.456-7.104 6.528-9.024L25.864 4z" />
                     </svg>
                     <p class="relative">A very fantastic idea. Thank you for helping me connect with other school mates.</p>
                   </div>
 
                   <footer class="mt-4">
-                    <p class="text-base font-semibold text-green-200">John Wick, former GSS Gwarinpa student</p>
+                    <p class="text-base font-semibold text-primary-200">John Wick, former GSS Gwarinpa student</p>
                   </footer>
                 </blockquote>
               </div>
@@ -74,7 +74,7 @@
               </div>
             </dl>
             <div class="py-10">
-              <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="text-base font-medium text-green-700">
+              <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="text-base font-medium text-primary-700">
                 <%- user ? 'Go to your profile' : 'Add Your Contact' %>
                 <span aria-hidden="true"> &rarr;</span>
               </a>
