--- a/view/registrationPage.ejs
+++ b/view/registrationPage.ejs
@@ -7,7 +7,7 @@
         <h1 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Register for an account</h1>
         <p class="mt-2 text-sm text-gray-600">
           Or
-          <a href="/login" class="font-medium text-green-700 hover:text-green-500">Login</a>
+          <a href="/login" class="font-medium text-primary-700 hover:text-primary-500">Login</a>
         </p>
       </div>
 
@@ -33,7 +33,7 @@
               <div class="w-full border-t border-gray-300"></div>
             </div>
             <div class="relative flex justify-center text-sm">
-              <span class="bg-green-100 px-2 text-gray-600">Or continue with</span>
+              <span class="bg-primary-100 px-2 text-gray-600">Or continue with</span>
             </div>
           </div>
         </div>
@@ -48,55 +48,55 @@
             <div class="relative">
               <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
               <div class="mt-1">
-                <input id="username" name="username" type="text" autocomplete="username" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="username" name="username" type="text" autocomplete="username" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
             <div class="relative">
               <label for="first-name" class="block text-sm font-medium text-gray-700">First name</label>
               <div class="mt-1">
-                <input id="first-name" name="firstName" type="text" autocomplete="given-name" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="first-name" name="firstName" type="text" autocomplete="given-name" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
             <div class="relative">
               <label for="last-name" class="block text-sm font-medium text-gray-700">Last name</label>
               <div class="mt-1">
-                <input id="last-name" name="lastName" type="text" autocomplete="family-name" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="last-name" name="lastName" type="text" autocomplete="family-name" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
             <div class="relative">
               <label for="year" class="block text-sm font-medium text-gray-700"> Year of graduation</label>
               <div class="mt-1">
-                <input id="year" name="year" type="text" autocomplete="bday-year" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="year" name="year" type="text" autocomplete="bday-year" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
             <div class="relative">
               <label for="email" class="block text-sm font-medium text-gray-700">Email address</label>
               <div class="mt-1">
-                <input id="email" name="email" type="email" autocomplete="email" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="email" name="email" type="email" autocomplete="email" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
             <div class="relative space-y-1">
               <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
               <div class="mt-1">
-                <input id="password" name="password" type="password" autocomplete="new-password" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="password" name="password" type="password" autocomplete="new-password" class="form-control block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
                 <p class="text-red-700 text-xs mt-1 italic">Password should be a minimun of 6 characters</p>
               </div>
             </div>
 
             <div class="flex items-center justify-between">
               <div class="flex items-center">
-                <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-green-700 focus:ring-green-500" />
+                <input id="remember-me" name="remember-me" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-primary-700 focus:ring-primary-500" />
                 <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
               </div>
             </div>
 
             <div>
-              <button type="submit" class="flex w-full justify-center rounded-md border bg-green-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Yes Create New Account</button>
+              <button type="submit" class="flex w-full justify-center rounded-md border bg-primary-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2">Yes Create New Account</button>
             </div>
           </form>
         </div>
