--- a/view/404.ejs
+++ b/view/404.ejs
@@ -5,11 +5,11 @@
     <main class="flex flex-grow flex-col">
       <div class="mx-auto flex w-full max-w-7xl flex-grow flex-col px-4 sm:px-6 lg:px-8">
         <div class="my-auto flex-shrink-0 py-16 sm:py-32">
-          <p class="text-base font-semibold text-green-700">404</p>
+          <p class="text-base font-semibold text-primary-700">404</p>
           <h1 class="mt-2 text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl">Page not found</h1>
           <p class="mt-2 text-base text-gray-600">Sorry, we couldn’t find the page you’re looking for.</p>
           <div class="mt-6">
-            <a href="/" class="text-base font-medium text-green-700 hover:text-green-500">
+            <a href="/" class="text-base font-medium text-primary-700 hover:text-primary-500">
               Go back home
               <span aria-hidden="true"> &rarr;</span>
             </a>
