--- a/view/homePage.ejs
+++ b/view/homePage.ejs
@@ -9,17 +9,17 @@
       <%- include('includes/flash') %>
       <!-- ERROR FLASH MESSAGE END-->
       <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl lg:text-5xl xl:text-6xl">
-        <p class="text-lg font-semibold text-green-700">Welcome</p>
+        <p class="text-lg font-semibold text-primary-700">Welcome</p>
         <span class="block xl:inline">Discover Present & Past</span>
-        <span class="block text-green-700 xl:inline">GSS Gwarinpa Students</span>
+        <span class="block text-primary-700 xl:inline">GSS Gwarinpa Students</span>
       </h1>
       <p class="mx-auto mt-3 max-w-md text-lg text-gray-700 sm:text-xl md:mt-5 md:max-w-3xl">Are you a current or past student of Junior or Senior Goverment Secondary Gwarinpa, Abuja - F.C.T? Add your contact or view and search the contacts of your school and classmmates. Project by GSS Gwarinpa class of 2006.</p>
       <div class="mt-10 sm:flex sm:justify-center lg:justify-start">
         <div class="rounded-md shadow">
-          <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-green-700 px-8 py-3 text-base font-medium text-white hover:bg-green-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
+          <a href="/<%- user ? 'contacts/'+user.username : 'register' %>" class="flex w-full items-center justify-center rounded-md border bg-primary-700 px-8 py-3 text-base font-medium text-white hover:bg-primary-700 md:py-4 md:px-10 md:text-lg"><%- user ? 'Go to your profile' : 'Add Your Contact' %></a>
         </div>
         <div class="mt-3 rounded-md shadow sm:mt-0 sm:ml-3">
-          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border bg-white px-8 py-3 text-base font-medium text-green-700 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View Contacts</a>
+          <a href="/contacts" class="flex w-full items-center justify-center rounded-md border bg-white px-8 py-3 text-base font-medium text-primary-700 hover:bg-gray-50 md:py-4 md:px-10 md:text-lg">View Contacts</a>
         </div>
       </div>
     </div>
@@ -28,11 +28,11 @@
     <img loading="lazy" class="absolute inset-0 h-full w-full object-cover" src="static/banner.jpeg" alt="" />
   </div>
 </section>
-<section class="py-12 bg-gradient-to-r from-gray-200 via-green-100 to-gray-200">
+<section class="py-12 bg-gradient-to-r from-gray-200 via-primary-100 to-gray-200">
   <div class="text-center sm:px-6 lg:px-8">
     <div class="space-y-12">
       <div class="space-y-5 sm:mx-auto sm:max-w-xl sm:space-y-4 lg:max-w-5xl">
-        <p class="text-lg font-semibold text-green-700">Contacts</p>
+        <p class="text-lg font-semibold text-primary-700">Contacts</p>
         <h2 class="text-3xl font-bold tracking-tight sm:text-4xl">Recently added contacts</h2>
       </div>
       <ul role="list" class="mx-auto space-y-16 sm:grid sm:grid-cols-3 sm:gap-16 sm:space-y-0 lg:grid-cols-4 lg:max-w-7xl lg:mx-auto">
