--- a/view/resetPasswordPage.ejs
+++ b/view/resetPasswordPage.ejs
@@ -7,7 +7,7 @@
         <h1 class="mt-6 text-3xl font-bold tracking-tight text-gray-900">Reset Your Password</h1>
         <p class="mt-2 text-sm text-gray-600">
           Or
-          <a href="/login" class="font-medium text-green-700 hover:text-green-500">Login</a>
+          <a href="/login" class="font-medium text-primary-700 hover:text-primary-500">Login</a>
         </p>
       </div>
 
@@ -20,11 +20,11 @@
             <div>
               <label for="reset_password_email" class="block text-sm font-medium text-gray-700">Email address</label>
               <div class="mt-1">
-                <input id="reset_password_email" name="reset_password_email" type="email" autocomplete="email" class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-green-500 focus:outline-none focus:ring-green-500 sm:text-sm" />
+                <input id="reset_password_email" name="reset_password_email" type="email" autocomplete="email" class="block w-full appearance-none rounded-md border border-gray-300 px-3 py-2 placeholder-gray-400 shadow-sm focus:border-primary-500 focus:outline-none focus:ring-primary-500 sm:text-sm" />
               </div>
             </div>
 
-            <button type="submit" class="flex w-full justify-center rounded-md border bg-green-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2">Send Me a Reset Token</button>
+            <button type="submit" class="flex w-full justify-center rounded-md border bg-primary-700 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-primary-500 focus:ring-offset-2">Send Me a Reset Token</button>
           </form>
         </div>
       </div>
